# SpaceSinter

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  README.md  colcon-defaults.yaml  docker-compose.yaml  package.xml  pre-commit-config.yaml  robot_description.urdf  solar_kernels.tm  sun_boot_class.cpp  sun_bootup.c  sunphysics.cpp  sunphysics.m  suntracking_windows.py
behaviors/estimate_sun_pose/: CMakeLists.txt  behavior_plugin.yaml  estimate_sun_pose_plugin_description.xml  package.xml
behaviors/estimate_sun_pose/include/estimate_sun_pose/: estimate_sun_pose.hpp
behaviors/estimate_sun_pose/src/: estimate_sun_pose.cpp  register_behaviors.cpp
behaviors/estimate_sun_pose/test/: CMakeLists.txt  test_behavior_plugins.cpp
behaviors/estimate_sun_pose/utility/: camera_calib_taker.py
kinova_driver/: CMakeLists.txt  package.xml
kinova_driver/hardware/: CMakeLists.txt
kinova_driver/hardware/include/kinova_ros/: kinova_arm.hpp
kinova_driver/hardware/src/: kinova_arm.cpp
kinova_driver/include/kinova_ros/: kinova_arm.hpp
kinova_driver/src/: kinova_arm.cpp
kinova_driver/src/src/: kinova_ang_control.cpp  kinova_force_control.cpp
src/behaviors/sun_pose_finder/: CMakeLists.txt  behavior_plugin.yaml  package.xml  sun_pose_finder_plugin_description.xml
src/behaviors/sun_pose_finder/src/: register_behaviors.cpp  sun_pose_finder.cpp
src/behaviors/sun_pose_finder/test/: test_behavior_plugins.cpp
src/example_behaviors/: CMakeLists.txt  README.md  behavior_plugin.yaml  example_behaviors_plugin_description.xml  package.xml
src/example_behaviors/include/example_behaviors/: example_add_two_ints_service_client.hpp  example_convert_mtc_solution_to_joint_trajectory.hpp  example_create_string_msg.hpp  example_delayed_message.hpp  example_fibonacci_action_client.hpp  example_get_string_from_topic.hpp  example_hello_world.hpp  example_ndt_registration.hpp  example_publish_color_rgba.hpp  example_ransac_registration.hpp  example_sam2_segmentation.hpp  example_setup_mtc_wave_hand.hpp
src/example_behaviors/src/: example_add_two_ints_service_client.cpp  example_convert_mtc_solution_to_joint_trajectory.cpp  example_create_string_msg.cpp  example_delayed_message.cpp  example_fibonacci_action_client.cpp  example_get_string_from_topic.cpp  example_hello_world.cpp  example_ndt_registration.cpp  example_publish_color_rgba.cpp  example_ransac_registration.cpp  example_sam2_segmentation.cpp  example_setup_mtc_wave_hand.cpp  register_behaviors.cpp
src/example_behaviors/test/: test_behavior_plugins.cpp
src/sinter_arm_description/sinter_arm_description/: CMakeLists.txt  README.md  package.xml
src/sinter_arm_description/sinter_arm_description/launch/: view_robot.launch.py  view_robot.launch.xml  view_robot.rviz
src/sinter_arm_description/sinter_arm_description/urdf/: j2n6s300.urdf.xacro  j2n6s300_urdf_macro.xacro
src/sinter_arm_driver/example_arm_hardware_interface/: CMakeLists.txt  README.md  package.xml
src/sinter_arm_driver/example_arm_hardware_interface/config/: ros2_controllers.yaml
src/sinter_arm_driver/example_arm_hardware_interface/launch/: view_robot.launch.py  view_robot.launch.xml
src/sinter_arm_driver/example_arm_hardware_interface/urdf/: r6bot.urdf.xacro  r6bot_mock_ros2_control_macro.xacro  r6bot_physical_ros2_control_macro.xacro
src/sinter_arm_drivers/kinova_driver/: CMakeLists.txt
src/sinter_arm_drivers/kinova_driver/kinova_ex/: kinova_ang_control.cpp  kinova_get_ang.cpp
src/sinter_arm_drivers/kinova_driver/src/: kinova_arm.cpp
src/sinter_arm_drivers/kinova_driver/udev/: 10-kinova-arm.rules
src/sinter_arm_drivers/realsense_driver/: CMakeLists.txt  package.xml
src/sinter_arm_drivers/realsense_driver/config/: realsense.yaml  realsense_color.yaml
src/sinter_arm_drivers/realsense_driver/launch/: realsense_camera.launch.py
src/sinter_arm_drivers/ros2_control_interfaces/: CMakeLists.txt  README.md  package.xml
src/sinter_arm_drivers/ros2_control_interfaces/config/: initial_positions.yaml  ros2_controllers.yaml
src/sinter_arm_drivers/ros2_control_interfaces/urdf/: j2n6s300_mock_ros2_control_macro.xacro  j2n6s300_physical_ros2_control_macro.xacro
src/sinter_arm_drivers/sun_camera_driver/: CMakeLists.txt  README.md  package.xml
src/sinter_arm_drivers/sun_camera_driver/config/: trackingcam.yaml
src/sinter_arm_drivers/sun_camera_driver/launch/: trackingcam_driver.launch.py
src/sinter_robot_hw/: CMakeLists.txt  README.md  package.xml
src/sinter_robot_hw/config/: config.yaml
src/sinter_robot_hw/config/control/: ros2_controllers.yaml
src/sinter_robot_hw/launch/: additional_driver_nodes.launch.py  agent_bridge.launch.xml
src/sinter_robot_hw/objectives/: expodemo.xml  get_sun_orientation.xml  plan_path_along_surface.xml  sintercontinuous.xml  sinterdemo.xml  sinterhatch.xml  sinterpathalongsurface.xml  teleoperate_jtc.xml  trackblob.xml  visualize_point_cloud.xml
src/sinter_robot_hw/urdf/: j2n6s300.urdf.xacro
src/sinter_robot_mock/: CMakeLists.txt  README.md  package.xml
src/sinter_robot_mock/config/: config.yaml
src/sinter_robot_mock/config/control/: ros2_controllers.yaml
src/sinter_robot_mock/config/moveit/: j2n300s.srdf  joint_jog.yaml  joint_limits.yaml  pose_ik.yaml  pose_jog.yaml
src/sinter_robot_mock/objectives/: grid.xml  movetogridpose.xml  simplescan.xml  transformposerotation.xml
src/sinter_robot_mock/urdf/: j2n6s300.urdf.xacro
src/sinter_robot_mock/waypoints/: waypoints.yaml
src/space_sinter/: CMakeLists.txt  behaviors.xml  package.xml
src/space_sinter/config/: config.yaml
src/space_sinter/config/moveit/: j2n6s300.ros2_control_fake.xacro  j2n6s300.srdf  joint_jog.yaml  servo_joint_limits.yaml
src/space_sinter/description/urdf/: kinova_gazebo.xacro  kinova_inertial.xacro
src/space_sinter/objectives/: heart.xml
src/space_sinter/src/: sun_boot_class.cpp
src/test_behavior/: CMakeLists.txt  behavior_plugin.yaml  package.xml  test_behavior_plugin_description.xml
src/test_behavior/src/: register_behaviors.cpp  test_behavior.cpp
src/test_behavior/test/: test_behavior_plugins.cpp
(+71 files in other folders)
