cmake_minimum_required(VERSION 3.22)
project(estimate_sun_pose CXX)

find_package(moveit_pro_package REQUIRED)
find_package(OpenCV REQUIRED)

moveit_pro_package()

set(THIS_PACKAGE_INCLUDE_DEPENDS moveit_studio_behavior_interface pluginlib)
foreach(package IN ITEMS ${THIS_PACKAGE_INCLUDE_DEPENDS})
  find_package(${package} REQUIRED)
endforeach()

add_library(
  estimate_sun_pose
  SHARED
  src/estimate_sun_pose.cpp
  src/register_behaviors.cpp)

target_include_directories(
  estimate_sun_pose
  PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
         $<INSTALL_INTERFACE:include>
         ${OpenCV_INCLUDE_DIRS})

ament_target_dependencies(estimate_sun_pose
                          ${THIS_PACKAGE_INCLUDE_DEPENDS})

# Install Libraries
install(
  TARGETS estimate_sun_pose
  EXPORT estimate_sun_poseTargets
  ARCHIVE DESTINATION lib
  LIBRARY DESTINATION lib
  RUNTIME DESTINATION bin
  INCLUDES
  DESTINATION include)

target_link_libraries(estimate_sun_pose
  ${OpenCV_LIBS})

if(BUILD_TESTING)
  moveit_pro_behavior_test(estimate_sun_pose)
endif()

# Export the behavior plugins defined in this package so they are available to
# plugin loaders that load the behavior base class library from the
# moveit_studio_behavior package.
pluginlib_export_plugin_description_file(
  moveit_studio_behavior_interface estimate_sun_pose_plugin_description.xml)

ament_export_targets(estimate_sun_poseTargets HAS_LIBRARY_TARGET)
ament_export_dependencies(${THIS_PACKAGE_INCLUDE_DEPENDS})
ament_package()
