<?xml version="1.0" encoding="utf-8" ?>
<package format="3">
  <name>estimate_sun_pose</name>
  <version>0.0.0</version>
  <description>CPP Behavior node that takes a ROS2 image and calculates the estimated sun pose for closed loop control.</description>

  <maintainer email="cameronhinkle@mines.edu">
    MoveIt Pro User
  </maintainer>
  <author email="cameronhinkle@mines.edu">
    MoveIt Pro User
  </author>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>moveit_pro_package</build_depend>

  <depend>libopencv-dev</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_studio_behavior_interface</depend>
  <depend>cv_bridge</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>image_transport</depend>
  
  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  <buildtool_depend>python3-colcon-common-extensions</buildtool_depend>
</package>
