<?xml version="1.0" ?>
<package format="3">
  <name>sinter_robot_hw</name>
  <version>0.0.1</version>
  <description>Hardware implementation of the space sinter robot</description>

  <maintainer email="cameronhinkle@mines.edu">
    Cameron Hinkle
  </maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>sinter_robot_mock</depend>
  <depend>camera_ros</depend>
  <depend>tf2_ros</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
