<?xml version="1.0" ?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>example_arm_description</name>
  <version>0.1.0</version>
  <description>
    Package with example URDF, Xacro, and visualization launch files for the
    ros2_control r6bot.
  </description>

  <maintainer email="nathanbrooks@picknik.ai">Nathan Brooks</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
