<?xml version="1.0" ?>
<package format="3">
  <name>sun_camera_driver</name>
  <version>0.1.0</version>
  <description>
    ros2 package for the sun-tracking camera launch drivers
  </description>

  <maintainer email="cameronhinkle@mines.edu">Cameron Hinkle</maintainer>

  <license>BSD-3-Clause</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>sinter_arm_description</exec_depend>
  <depend>camera_ros</depend>
  <depend>libcamera</depend>

  <!-- URDF + xacro -->
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <!-- Launch/system -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Visualization -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <!-- Testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
